--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "devDependencies": {
-    "prisma": "^5.15.1"
+    "prisma": "^5.16.0"
   },
   "dependencies": {
+    "@prisma/client": "^5.16.0",
     "morgan": "^1.10.0"
   }
 }
